# sp-exam

./: README.md
project/: CMakeLists.txt  main.cpp  testfile.json
project/include/: assignmentstrategy.hpp  benchmark.hpp  candlestick.hpp  holdingstrategy.hpp  json.hpp  meta.hpp  ticker.hpp  tradestamp.hpp  tradestrategy.hpp
project/py/: plotter.py
project/src/: benchmark.cpp  candlestick.cpp  doctest.cpp  unittests.cpp
